--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -1,6 +1,7 @@
 :root {
   font-size: 1.5rem;
   letter-spacing: 0.07rem;
+  line-height: 1.3rem;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Roboto,
     Oxygen, Ubuntu, Cantarell, "Open Sans", "Helvetica Neue", sans-serif;
 }
@@ -26,13 +27,10 @@ body {
   margin-top: -1rem;
   margin-left: 3rem;
   margin-right: 8rem;
-  /* border: 1px solid blue; */
   width: 450px;
-  /* max-width: 475px; */
 }
 
 img {
-  /* border: pink 1px solid; */
   width: 100%;
   z-index: -1;
 }
@@ -40,7 +38,6 @@ img {
 .items {
   display: flex;
   justify-content: space-between;
-  /* border: 1px solid red; */
   top: 17%;
   right: 36%;
   width: 220px;
@@ -52,7 +49,6 @@ img {
   margin-top: 0;
   padding: 0.1rem;
   background-color: rgba(255, 255, 255, 0.6);
-  /* border: 1px solid green; */
 }
 
 .inventory-display {
@@ -63,7 +59,6 @@ img {
   height: 200px;
   padding: 1rem;
   text-align: center;
-  /* border: 1px solid blue; */
   background: rgba(255, 255, 255, 0.6);
 }
 
@@ -71,7 +66,6 @@ img {
   position: absolute;
   top: 19%;
   right: 14%;
-  /* border: 1px solid orange; */
 }
 
 .deposit-coins-notification {
@@ -84,7 +78,6 @@ img {
   height: 36px;
   text-align: center;
   background-color: palevioletred;
-  /* border: 1px solid green; */
 }
 
 .deposit-coins-notification:before {
@@ -108,7 +101,6 @@ img {
   height: 36px;
   text-align: center;
   background-color: cornflowerblue;
-  /* border: 1px solid green; */
 }
 
 .return-coins-notification:before {
@@ -128,7 +120,6 @@ img {
   right: 16%;
   width: 35px;
   height: 89px;
-  /* border: 1px solid green; */
 }
 
 .coin-return {
@@ -138,5 +129,4 @@ img {
   right: 10.5%;
   width: 85px;
   height: 49px;
-  /* border: 1px solid purple; */
 }
