--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -62,6 +62,14 @@ img {
   background: rgba(255, 255, 255, 0.6);
 }
 
+.user-drinks-message {
+  margin-top: 0;
+}
+
+.red + .red {
+  margin-top: 0.5rem;
+}
+
 .coin-display {
   position: absolute;
   top: 19%;
